--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,16 +36,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: swift build
   system_tests:
-    needs: setup_swift
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: swift build
       - run: Tests/test.sh
   unit_tests:
-    needs: setup_swift
+    needs: build
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v2
-      - run: swift build
       - run: swift test
