--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
       - uses: actions/checkout@v2
       - run: swift build
   system_tests:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: swift build
       - run: Tests/test.sh
   unit_tests:
     needs: build
