--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: swift build
   system_tests:
+    needs: setup_swift
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
